# clearIP

./: .flaskenv  .gitignore  LICENSE.txt  README.md  pyproject.toml
app/: __init__.py  commands.py  config.py  models.py  routes.py  utils.py
app/static/css/: main.css
app/static/js/: theme.js
app/templates/: index.html
